Initial implemenatation of catalog-service ResourceStore